Changelog for getResources.

getResources 1.1.0-pl (June 28, 2010)
====================================
- Added &resources property for including/excluding specific resources
- Added &showDeleted property
- Allow multiple contexts to be passed into &context
- Added &showUnpublish property
- Added getresources.core_path reference for easier development
- [#ADDON-135] Make output separator configurable via outputSeparator property
- Add where property to allow ad hoc criteria in JSON format

getResources 1.0.0-ga (December 29, 2009)
====================================
- [#ADDON-81] Allow empty tvPrefix property.
- [#ADDON-89] Allow parents property to have a value of 0.
- Changed default value of sortbyAlias to empty string and added sortbyEscaped property with default of 0.
- Added changelog, license, and readme.